# Tidaluna-Launcher

./: Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: release.yml
crates/xtask-prepare-release/src/: main.rs
installers/NSIS/: headers.nsh  installer.nsi
installers/NSIS/sections/: install.nsi  uninstall.nsi
installers/linux-sh/: install.sh
src/: constants.rs  lib.rs  progress.rs  tidal.rs  updater.rs  windows.rs
